# cpp-template

./: .gitignore  CMakeLists.txt
src/: main.cpp
